add namespace base methods
