# internal/server/api/v1/resource.pb.go
@@ -30,8 +30,13 @@ type ResourceRequest struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	Name   string `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
-	Height uint64 `protobuf:"varint,2,opt,name=height,proto3" json:"height,omitempty"`
+	ApiVersion string `protobuf:"bytes,1,opt,name=api_version,json=apiVersion,proto3" json:"api_version,omitempty"`
+	Kind       string `protobuf:"bytes,2,opt,name=kind,proto3" json:"kind,omitempty"`
+	Metadata   *Meta  `protobuf:"bytes,3,opt,name=metadata,proto3" json:"metadata,omitempty"`
+	// Types that are assignable to Spec:
+	//	*ResourceRequest_Service
+	//	*ResourceRequest_Deployment
+	Spec isResourceRequest_Spec `protobuf_oneof:"spec"`
 }
 
 func (x *ResourceRequest) Reset() {
@@ -66,33 +71,150 @@ func (*ResourceRequest) Descriptor() ([]byte, []int) {
 	return file_api_proto_v1_resource_proto_rawDescGZIP(), []int{0}
 }
 
-func (x *ResourceRequest) GetName() string {
+func (x *ResourceRequest) GetApiVersion() string {
 	if x != nil {
-		return x.Name
+		return x.ApiVersion
 	}
 	return ""
 }
 
-func (x *ResourceRequest) GetHeight() uint64 {
+func (x *ResourceRequest) GetKind() string {
 	if x != nil {
-		return x.Height
+		return x.Kind
 	}
-	return 0
+	return ""
+}
+
+func (x *ResourceRequest) GetMetadata() *Meta {
+	if x != nil {
+		return x.Metadata
+	}
+	return nil
+}
+
+func (m *ResourceRequest) GetSpec() isResourceRequest_Spec {
+	if m != nil {
+		return m.Spec
+	}
+	return nil
+}
+
+func (x *ResourceRequest) GetService() *SpecService {
+	if x, ok := x.GetSpec().(*ResourceRequest_Service); ok {
+		return x.Service
+	}
+	return nil
+}
+
+func (x *ResourceRequest) GetDeployment() *SpecDeployment {
+	if x, ok := x.GetSpec().(*ResourceRequest_Deployment); ok {
+		return x.Deployment
+	}
+	return nil
+}
+
+type isResourceRequest_Spec interface {
+	isResourceRequest_Spec()
+}
+
+type ResourceRequest_Service struct {
+	Service *SpecService `protobuf:"bytes,4,opt,name=service,proto3,oneof"`
+}
+
+type ResourceRequest_Deployment struct {
+	Deployment *SpecDeployment `protobuf:"bytes,5,opt,name=deployment,proto3,oneof"`
+}
+
+func (*ResourceRequest_Service) isResourceRequest_Spec() {}
+
+func (*ResourceRequest_Deployment) isResourceRequest_Spec() {}
+
+type SpecService struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+}
+
+func (x *SpecService) Reset() {
+	*x = SpecService{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_api_proto_v1_resource_proto_msgTypes[1]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *SpecService) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*SpecService) ProtoMessage() {}
+
+func (x *SpecService) ProtoReflect() protoreflect.Message {
+	mi := &file_api_proto_v1_resource_proto_msgTypes[1]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use SpecService.ProtoReflect.Descriptor instead.
+func (*SpecService) Descriptor() ([]byte, []int) {
+	return file_api_proto_v1_resource_proto_rawDescGZIP(), []int{1}
+}
+
+type SpecDeployment struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+}
+
+func (x *SpecDeployment) Reset() {
+	*x = SpecDeployment{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_api_proto_v1_resource_proto_msgTypes[2]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *SpecDeployment) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*SpecDeployment) ProtoMessage() {}
+
+func (x *SpecDeployment) ProtoReflect() protoreflect.Message {
+	mi := &file_api_proto_v1_resource_proto_msgTypes[2]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use SpecDeployment.ProtoReflect.Descriptor instead.
+func (*SpecDeployment) Descriptor() ([]byte, []int) {
+	return file_api_proto_v1_resource_proto_rawDescGZIP(), []int{2}
 }
 
 type ResourceResponse struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
-
-	Balance           map[string]string `protobuf:"bytes,1,rep,name=balance,proto3" json:"balance,omitempty" protobuf_key:"bytes,1,opt,name=key,proto3" protobuf_val:"bytes,2,opt,name=value,proto3"`
-	TransactionsCount string            `protobuf:"bytes,2,opt,name=transactions_count,json=transactionsCount,proto3" json:"transactions_count,omitempty"`
 }
 
 func (x *ResourceResponse) Reset() {
 	*x = ResourceResponse{}
 	if protoimpl.UnsafeEnabled {
-		mi := &file_api_proto_v1_resource_proto_msgTypes[1]
+		mi := &file_api_proto_v1_resource_proto_msgTypes[3]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		ms.StoreMessageInfo(mi)
 	}
@@ -105,7 +227,7 @@ func (x *ResourceResponse) String() string {
 func (*ResourceResponse) ProtoMessage() {}
 
 func (x *ResourceResponse) ProtoReflect() protoreflect.Message {
-	mi := &file_api_proto_v1_resource_proto_msgTypes[1]
+	mi := &file_api_proto_v1_resource_proto_msgTypes[3]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -118,21 +240,7 @@ func (x *ResourceResponse) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use ResourceResponse.ProtoReflect.Descriptor instead.
 func (*ResourceResponse) Descriptor() ([]byte, []int) {
-	return file_api_proto_v1_resource_proto_rawDescGZIP(), []int{1}
-}
-
-func (x *ResourceResponse) GetBalance() map[string]string {
-	if x != nil {
-		return x.Balance
-	}
-	return nil
-}
-
-func (x *ResourceResponse) GetTransactionsCount() string {
-	if x != nil {
-		return x.TransactionsCount
-	}
-	return ""
+	return file_api_proto_v1_resource_proto_rawDescGZIP(), []int{3}
 }
 
 var File_api_proto_v1_resource_proto protoreflect.FileDescriptor
@@ -140,24 +248,27 @@ var File_api_proto_v1_resource_proto protoreflect.FileDescriptor
 var file_api_proto_v1_resource_proto_rawDesc = []byte{
 	0x0a, 0x1b, 0x61, 0x70, 0x69, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2f, 0x76, 0x31, 0x2f, 0x72,
 	0x65, 0x73, 0x6f, 0x75, 0x72, 0x63, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x02, 0x76,
-	0x31, 0x22, 0x3d, 0x0a, 0x0f, 0x52, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63, 0x65, 0x52, 0x65, 0x71,
-	0x75, 0x65, 0x73, 0x74, 0x12, 0x12, 0x0a, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x01, 0x20, 0x01,
-	0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x16, 0x0a, 0x06, 0x68, 0x65, 0x69, 0x67,
-	0x68, 0x74, 0x18, 0x02, 0x20, 0x01, 0x28, 0x04, 0x52, 0x06, 0x68, 0x65, 0x69, 0x67, 0x68, 0x74,
-	0x22, 0xba, 0x01, 0x0a, 0x10, 0x52, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63, 0x65, 0x52, 0x65, 0x73,
-	0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x3b, 0x0a, 0x07, 0x62, 0x61, 0x6c, 0x61, 0x6e, 0x63, 0x65,
-	0x18, 0x01, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x21, 0x2e, 0x76, 0x31, 0x2e, 0x52, 0x65, 0x73, 0x6f,
-	0x75, 0x72, 0x63, 0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x2e, 0x42, 0x61, 0x6c,
-	0x61, 0x6e, 0x63, 0x65, 0x45, 0x6e, 0x74, 0x72, 0x79, 0x52, 0x07, 0x62, 0x61, 0x6c, 0x61, 0x6e,
-	0x63, 0x65, 0x12, 0x2d, 0x0a, 0x12, 0x74, 0x72, 0x61, 0x6e, 0x73, 0x61, 0x63, 0x74, 0x69, 0x6f,
-	0x6e, 0x73, 0x5f, 0x63, 0x6f, 0x75, 0x6e, 0x74, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x11,
-	0x74, 0x72, 0x61, 0x6e, 0x73, 0x61, 0x63, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x43, 0x6f, 0x75, 0x6e,
-	0x74, 0x1a, 0x3a, 0x0a, 0x0c, 0x42, 0x61, 0x6c, 0x61, 0x6e, 0x63, 0x65, 0x45, 0x6e, 0x74, 0x72,
-	0x79, 0x12, 0x10, 0x0a, 0x03, 0x6b, 0x65, 0x79, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x03,
-	0x6b, 0x65, 0x79, 0x12, 0x14, 0x0a, 0x05, 0x76, 0x61, 0x6c, 0x75, 0x65, 0x18, 0x02, 0x20, 0x01,
-	0x28, 0x09, 0x52, 0x05, 0x76, 0x61, 0x6c, 0x75, 0x65, 0x3a, 0x02, 0x38, 0x01, 0x42, 0x0f, 0x5a,
-	0x0d, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0x62, 0x06,
-	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x31, 0x1a, 0x17, 0x61, 0x70, 0x69, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2f, 0x76, 0x31, 0x2f,
+	0x6d, 0x65, 0x74, 0x61, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0xd7, 0x01, 0x0a, 0x0f, 0x52,
+	0x65, 0x73, 0x6f, 0x75, 0x72, 0x63, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x1f,
+	0x0a, 0x0b, 0x61, 0x70, 0x69, 0x5f, 0x76, 0x65, 0x72, 0x73, 0x69, 0x6f, 0x6e, 0x18, 0x01, 0x20,
+	0x01, 0x28, 0x09, 0x52, 0x0a, 0x61, 0x70, 0x69, 0x56, 0x65, 0x72, 0x73, 0x69, 0x6f, 0x6e, 0x12,
+	0x12, 0x0a, 0x04, 0x6b, 0x69, 0x6e, 0x64, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6b,
+	0x69, 0x6e, 0x64, 0x12, 0x24, 0x0a, 0x08, 0x6d, 0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61, 0x18,
+	0x03, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x08, 0x2e, 0x76, 0x31, 0x2e, 0x4d, 0x65, 0x74, 0x61, 0x52,
+	0x08, 0x6d, 0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61, 0x12, 0x2b, 0x0a, 0x07, 0x73, 0x65, 0x72,
+	0x76, 0x69, 0x63, 0x65, 0x18, 0x04, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x0f, 0x2e, 0x76, 0x31, 0x2e,
+	0x53, 0x70, 0x65, 0x63, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x48, 0x00, 0x52, 0x07, 0x73,
+	0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x34, 0x0a, 0x0a, 0x64, 0x65, 0x70, 0x6c, 0x6f, 0x79,
+	0x6d, 0x65, 0x6e, 0x74, 0x18, 0x05, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x12, 0x2e, 0x76, 0x31, 0x2e,
+	0x53, 0x70, 0x65, 0x63, 0x44, 0x65, 0x70, 0x6c, 0x6f, 0x79, 0x6d, 0x65, 0x6e, 0x74, 0x48, 0x00,
+	0x52, 0x0a, 0x64, 0x65, 0x70, 0x6c, 0x6f, 0x79, 0x6d, 0x65, 0x6e, 0x74, 0x42, 0x06, 0x0a, 0x04,
+	0x73, 0x70, 0x65, 0x63, 0x22, 0x0d, 0x0a, 0x0b, 0x53, 0x70, 0x65, 0x63, 0x53, 0x65, 0x72, 0x76,
+	0x69, 0x63, 0x65, 0x22, 0x10, 0x0a, 0x0e, 0x53, 0x70, 0x65, 0x63, 0x44, 0x65, 0x70, 0x6c, 0x6f,
+	0x79, 0x6d, 0x65, 0x6e, 0x74, 0x22, 0x12, 0x0a, 0x10, 0x52, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63,
+	0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x42, 0x0f, 0x5a, 0x0d, 0x73, 0x65, 0x72,
+	0x76, 0x65, 0x72, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74,
+	0x6f, 0x33,
 }
 
 var (
@@ -172,19 +283,23 @@ func file_api_proto_v1_resource_proto_rawDescGZIP() []byte {
 	return file_api_proto_v1_resource_proto_rawDescData
 }
 
-var file_api_proto_v1_resource_proto_msgTypes = make([]protoimpl.MessageInfo, 3)
+var file_api_proto_v1_resource_proto_msgTypes = make([]protoimpl.MessageInfo, 4)
 var file_api_proto_v1_resource_proto_goTypes = []interface{}{
 	(*ResourceRequest)(nil),  // 0: v1.ResourceRequest
-	(*ResourceResponse)(nil), // 1: v1.ResourceResponse
-	nil,                      // 2: v1.ResourceResponse.BalanceEntry
+	(*SpecService)(nil),      // 1: v1.SpecService
+	(*SpecDeployment)(nil),   // 2: v1.SpecDeployment
+	(*ResourceResponse)(nil), // 3: v1.ResourceResponse
+	(*Meta)(nil),             // 4: v1.Meta
 }
 var file_api_proto_v1_resource_proto_depIdxs = []int32{
-	2, // 0: v1.ResourceResponse.balance:type_name -> v1.ResourceResponse.BalanceEntry
-	1, // [1:1] is the sub-list for method output_type
-	1, // [1:1] is the sub-list for method input_type
-	1, // [1:1] is the sub-list for extension type_name
-	1, // [1:1] is the sub-list for extension extendee
-	0, // [0:1] is the sub-list for field type_name
+	4, // 0: v1.ResourceRequest.metadata:type_name -> v1.Meta
+	1, // 1: v1.ResourceRequest.service:type_name -> v1.SpecService
+	2, // 2: v1.ResourceRequest.deployment:type_name -> v1.SpecDeployment
+	3, // [3:3] is the sub-list for method output_type
+	3, // [3:3] is the sub-list for method input_type
+	3, // [3:3] is the sub-list for extension type_name
+	3, // [3:3] is the sub-list for extension extendee
+	0, // [0:3] is the sub-list for field type_name
 }
 
 func init() { file_api_proto_v1_resource_proto_init() }
@@ -192,6 +307,7 @@ func file_api_proto_v1_resource_proto_init() {
 	if File_api_proto_v1_resource_proto != nil {
 		return
 	}
+	file_api_proto_v1_meta_proto_init()
 	if !protoimpl.UnsafeEnabled {
 		file_api_proto_v1_resource_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*ResourceRequest); i {
@@ -206,6 +322,30 @@ func file_api_proto_v1_resource_proto_init() {
 			}
 		}
 		file_api_proto_v1_resource_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*SpecService); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_api_proto_v1_resource_proto_msgTypes[2].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*SpecDeployment); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_api_proto_v1_resource_proto_msgTypes[3].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*ResourceResponse); i {
 			case 0:
 				return &v.state
@@ -218,13 +358,17 @@ func file_api_proto_v1_resource_proto_init() {
 			}
 		}
 	}
+	file_api_proto_v1_resource_proto_msgTypes[0].OneofWrappers = []interface{}{
+		(*ResourceRequest_Service)(nil),
+		(*ResourceRequest_Deployment)(nil),
+	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
 		File: protoimpl.DescBuilder{
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_api_proto_v1_resource_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   3,
+			NumMessages:   4,
 			NumExtensions: 0,
 			NumServices:   0,
 		},
